# hands-on-ai-engineering

./: .env.example  .gitignore  CONTRIBUTING.md  CURRICULUM_PROMPT.md  LICENSE  PRAGMATIC-GENAI-CURRICULUM.md  PROJECT-TEMPLATES.md  QUICKSTART.md  README-NEW.md  README.md  STUDENT-GUIDE.md  debug_tool.py  hands_on_ai_engineering_upgraded_curriculum_plan.docx  layer1-plan-v2-modified.md  mypy.ini  package-lock.json  pandas-groupby-reference.md  pyproject.toml  pytest.ini  requirements.txt  setup-aitea-env.ps1  setup-aitea-env.sh  setup.cfg  uv-conda-fixed.ps1
.claude/: settings.local.json
Layer1-Curriculum/: STRUCTURE-OVERVIEW.md
Layer1-Final/: README.md
_PLANNING-2026-03/: CURRICULUM-DECISIONS-2026-03.md  FOLDER-ORGANIZATION-2026-03.md  PROJECT-STRUCTURE.md  cleanup-old-folders.ps1
_archive/: README.md
_bmad-output/: CHAPTER-10-IMPLEMENTATION-COMPLETE.md  CHAPTER-6B-ANALYSIS-AND-REENHANCEMENT-PLAN.md  CHAPTER-6B-IMPLEMENTATION-COMPLETE.md  CHAPTER-6B-REENHANCEMENT-PROGRESS.md  CHAPTER-7-IMPLEMENTATION-COMPLETE.md  CHAPTER-8-IMPLEMENTATION-COMPLETE.md  CHAPTER-9-IMPLEMENTATION-COMPLETE.md  FRAMEWORK-CLARIFICATION-23-vs-17.md  IMPLEMENTATION-GUIDE-Chapter-7.md  MERGE-UTILITY-GUIDE.md  PHASE-1-IMPLEMENTATION-STATUS.md  QUICK-DECISION-GUIDE.md  README.md  SCAFFOLDING-TRANSFORMATION-GUIDE-2026-01-21.md  SESSION-CHAPTER-06A-COMPLETE.md  SESSION-CHAPTER-06A-ENHANCEMENT-STARTED.md  SESSION-CHAPTER-06A-TIER-1-2-COMPLETE.md  SESSION-SUMMARY-2026-01-21.md  chapter-06A-enhancement-plan-DETAILED.md  chapter-06B-FINAL-COMPLETION-REPORT.md  chapter-06B-enhancement-COMPLETION.md  chapter-06B-enhancement-SUMMARY.md  chapter-06B-enhancement-plan-DETAILED.md  chapter-06B-enhancements-ALL-TIERS.md  chapter-06C-enhancements-ALL-TIERS.md  chapter-07-enhancements-ALL-TIERS.md  chapter-08-enhancements-ALL-TIERS.md  chapter-09-continuation.md  chapter-09-enhancements-ALL-TIERS.md  chapter-10-enhancements-ALL-TIERS.md  chapter-11-enhancements-ALL-TIERS.md  chapter-scaffolding-audit-report.md  chapter-scaffolding-conversion-template.md  merge_chapter.py  scaffolding-conversion-template.md  sprint-0-checkpoint-report.md  task-15-quality-verification-summary.md  task-4.2-completion-summary.md  task-4.2-demo-output.md  task-4.2-integration-test.py  (+1 more)
aitea/: .env.example  .gitignore  PACKAGE_INFO.md  README.md  app.py  pyproject.toml
aitea/src/models/: enums.py
conductor/: analysis-summary.md  md_to_pdf.py
curriculum/: CHAPTER-ENHANCEMENT-WORKFLOW.md  PILOT-SCAFFOLDING-ENHANCEMENT-WORKFLOW.md  SETUP_SUMMARY.md
docs/: index.md  (+2 more)
layer1-phase1/: PHASE1-COMPLETE.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
layer1-phase1/alembic/: env.py
layer1-phase1/alembic/versions/: 001_initial.py
layer1-phase1/diagnostic/: task_1_csv_pipeline.py  task_4_type_hints.py
layer1-phase1/infra/: Dockerfile  init-db.sql
layer1-phase1/scripts/: seed_data.py
layer1-phase1/src/app/: __main__.py  main.py
layer1-phase1/src/app/api/: health.py
layer1-phase1/src/app/core/: config.py  database.py  logging_config.py
layer1-phase1/src/app/services/: conversation_service.py  extraction.py
layer1-phase1/src/app/services/llm/: __init__.py  openai_provider.py  provider.py
layer1-phase1/tests/: conftest.py
(+521 files in other folders)
