[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aitea"
version = "0.1.0"
description = "AI Time Estimation Agent for Web Projects"
requires-python = ">=3.10"
dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "hypothesis>=6.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "pytest-asyncio>=0.21.0"
]
ingest = [
    "pypdf>=3.0.0",
    "pdfplumber>=0.9.0",
    "python-docx>=0.8.11",
    "beautifulsoup4>=4.12.0",
    "PyYAML>=6.0.0"
]
langchain = [
    "langchain-core>=0.1.0",
    "langchain-openai>=0.0.5",
    "langchain-community>=0.0.20",
    "chromadb>=0.4.0"
]
agents = [
    "crewai>=0.1.0",
    "pyautogen>=0.2.0",
]

[project.scripts]
aitea = "src.cli.main:app"
