[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aitea"
version = "0.1.0"
description = "AI Time Estimation Agent"
requires-python = ">=3.10"
dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "hypothesis>=6.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
]
agents = [
    "crewai>=0.1.0",
    "pyautogen>=0.2.0",
]

[project.scripts]
aitea = "src.cli.main:app"